[project]
name = "pos_billing_card"
authors = [
	{ name = "Bixsuite", email = "hello@bixsuite.com" }
]
description = "Billing Card / Token system for multi-floor clothing retail showroom POS"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 110
target-version = "py310"
